--- a/ServerServiceCenter/ServerServiceCenter/appsettings.json
+++ b/ServerServiceCenter/ServerServiceCenter/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "data source=JAKE-PC\\SQLEXPRESS; Initial Catalog=ServiceSenterDb; Integrated Security=True; trustservercertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
