--- a/Client/package.json
+++ b/Client/package.json
@@ -3,15 +3,24 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@emotion/react": "^11.10.5",
+		"@emotion/styled": "^11.10.5",
 		"@fortawesome/fontawesome-svg-core": "^1.2.36",
 		"@fortawesome/free-solid-svg-icons": "^5.15.4",
 		"@fortawesome/react-fontawesome": "^0.1.16",
+		"@mui/material": "^5.10.14",
 		"axios": "^0.24.0",
+		"bootstrap": "^5.2.2",
+		"boxicons": "^2.1.4",
+		"mdb-react-ui-kit": "^5.0.0",
 		"react": "^18.0.0",
 		"react-bootstrap": "^2.6.0",
 		"react-dom": "^18.0.0",
+		"react-icons": "^4.6.0",
 		"react-router-dom": "^6.3.0",
-		"react-scripts": "5.0.0"
+		"react-scripts": "^5.0.1",
+		"sass": "^1.56.1",
+		"styled-components": "^5.3.6"
 	},
 	"scripts": {
 		"start": "react-scripts start",
