--- a/Client/package.json
+++ b/Client/package.json
@@ -10,11 +10,15 @@
 		"@fortawesome/react-fontawesome": "^0.1.16",
 		"@mui/material": "^5.10.14",
 		"axios": "^0.24.0",
-		"bootstrap": "^5.2.2",
+		"bootstrap": "^4.0.0",
 		"boxicons": "^2.1.4",
 		"mdb-react-ui-kit": "^5.0.0",
 		"react": "^18.0.0",
 		"react-bootstrap": "^2.6.0",
+		"react-bootstrap-icons": "^1.10.2",
+		"react-bootstrap-table-next": "^4.0.3",
+		"react-bootstrap-table2-editor": "^1.4.0",
+		"react-bootstrap-table2-filter": "^1.3.3",
 		"react-dom": "^18.0.0",
 		"react-icons": "^4.6.0",
 		"react-router-dom": "^6.3.0",
