--- a/Client/package.json
+++ b/Client/package.json
@@ -13,12 +13,14 @@
 		"bootstrap": "^4.0.0",
 		"boxicons": "^2.1.4",
 		"mdb-react-ui-kit": "^5.0.0",
+		"prop-types": "^15.8.1",
 		"react": "^18.0.0",
 		"react-bootstrap": "^2.6.0",
 		"react-bootstrap-icons": "^1.10.2",
 		"react-bootstrap-table-next": "^4.0.3",
 		"react-bootstrap-table2-editor": "^1.4.0",
 		"react-bootstrap-table2-filter": "^1.3.3",
+		"react-confirm-bootstrap": "^5.3.1",
 		"react-dom": "^18.0.0",
 		"react-icons": "^4.6.0",
 		"react-router-dom": "^6.3.0",
