--- a/ServerServiceCenter/Dockerfile
+++ b/ServerServiceCenter/Dockerfile
@@ -1,7 +1,7 @@
 #See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
-WORKDIR /app
+WORKDIR /server
 EXPOSE 80
 EXPOSE 443
 
@@ -13,12 +13,12 @@ COPY ["Models/Models.csproj", "Models/"]
 RUN dotnet restore "ServerServiceCenter/ServerServiceCenter.csproj"
 COPY . .
 WORKDIR "/src/ServerServiceCenter"
-RUN dotnet build "ServerServiceCenter.csproj" -c Release -o /app/build
+RUN dotnet build "ServerServiceCenter.csproj" -c Release -o /server/build
 
 FROM build AS publish
-RUN dotnet publish "ServerServiceCenter.csproj" -c Release -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "ServerServiceCenter.csproj" -c Release -o /server/publish /p:UseAppHost=false
 
 FROM base AS final
-WORKDIR /app
-COPY --from=publish /app/publish .
+WORKDIR /server
+COPY --from=publish /server/publish .
 ENTRYPOINT ["dotnet", "ServerServiceCenter.dll"]
