--- a/Client/package.json
+++ b/Client/package.json
@@ -8,11 +8,12 @@
 		"@fortawesome/fontawesome-svg-core": "^1.2.36",
 		"@fortawesome/free-solid-svg-icons": "^5.15.4",
 		"@fortawesome/react-fontawesome": "^0.1.16",
+		"@material-ui/core": "^4.12.4",
 		"@mui/material": "^5.10.14",
 		"axios": "^0.24.0",
 		"bootstrap": "^4.0.0",
 		"boxicons": "^2.1.4",
-		"mdb-react-ui-kit": "^5.0.0",
+		"bulma": "^0.9.4",
 		"prop-types": "^15.8.1",
 		"react": "^18.0.0",
 		"react-bootstrap": "^2.6.0",
@@ -23,6 +24,7 @@
 		"react-confirm-bootstrap": "^5.3.1",
 		"react-dom": "^18.0.0",
 		"react-icons": "^4.6.0",
+		"react-images-uploading": "^3.1.7",
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "^5.0.1",
 		"sass": "^1.56.1",
