--- a/Client/package.json
+++ b/Client/package.json
@@ -14,6 +14,7 @@
 		"bootstrap": "^4.0.0",
 		"boxicons": "^2.1.4",
 		"bulma": "^0.9.4",
+		"js-cookie": "^3.0.1",
 		"prop-types": "^15.8.1",
 		"react": "^18.0.0",
 		"react-bootstrap": "^2.6.0",
@@ -21,6 +22,7 @@
 		"react-bootstrap-table-next": "^4.0.3",
 		"react-bootstrap-table2-editor": "^1.4.0",
 		"react-bootstrap-table2-filter": "^1.3.3",
+		"react-bootstrap-table2-toolkit": "^2.1.3",
 		"react-confirm-bootstrap": "^5.3.1",
 		"react-dom": "^18.0.0",
 		"react-icons": "^4.6.0",
