--- a/ServerServiceCenter/ServerServiceCenter/appsettings.json
+++ b/ServerServiceCenter/ServerServiceCenter/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "data source=JAKE-PC\\SQLEXPRESS; Initial Catalog=ServiceSenterDb; Integrated Security=True; trustservercertificate=True"
+    //"DefaultConnection": "data source=localhost\\sql2,1435; Initial Catalog=ServiceSenterDb; user='SA';password='Passw0rd'; trustservercertificate=True"
+    "DefaultConnection": "data source=JAKE-PC\\SQLEXPRESS; Initial Catalog=ServiceSenterDb; user='ForLabs';password='1234'; trustservercertificate=True"
   },
   "Logging": {
     "LogLevel": {
