--- a/Client/package.json
+++ b/Client/package.json
@@ -9,6 +9,7 @@
 		"@fortawesome/free-solid-svg-icons": "^5.15.4",
 		"@fortawesome/react-fontawesome": "^0.1.16",
 		"@material-ui/core": "^4.12.4",
+		"@microsoft/signalr": "^7.0.4",
 		"@mui/material": "^5.10.14",
 		"axios": "^0.24.0",
 		"bootstrap": "^4.0.0",
@@ -27,6 +28,7 @@
 		"react-dom": "^18.0.0",
 		"react-icons": "^4.6.0",
 		"react-images-uploading": "^3.1.7",
+		"react-picky": "^5.3.2",
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "^5.0.1",
 		"sass": "^1.56.1",
